Bag now uses LinkedList, should be more efficient.  other changes too